--- a/frontend/src/locales/de.po
+++ b/frontend/src/locales/de.po
@@ -673,6 +673,10 @@ msgstr "Teilnehmer erstellt"
 msgid "Attendee Details"
 msgstr "Teilnehmerdetails"
 
+#: src/components/layouts/AuthLayout/index.tsx:72
+msgid "Attendee Management"
+msgstr "Teilnehmerverwaltung"
+
 #: src/components/layouts/CheckIn/index.tsx:140
 msgid "Attendee not found"
 msgstr "Teilnehmer nicht gefunden"
@@ -721,6 +725,14 @@ msgstr "Teilnehmer mit einem bestimmten Produkt"
 #: src/components/common/WidgetEditor/index.tsx:233
 msgid "Auto Resize"
 msgstr "Automatische Größenanpassung"
+
+#: src/components/layouts/AuthLayout/index.tsx:87
+msgid "Auto Workflow"
+msgstr "Automatisierter Arbeitsablauf"
+
+#: src/components/layouts/AuthLayout/index.tsx:78
+msgid "Automated entry management with multiple check-in lists and real-time validation"
+msgstr "Automatisierte Einlassverwaltung mit mehreren Check-in-Listen und Echtzeitvalidierung"
 
 #: src/components/common/WidgetEditor/index.tsx:236
 msgid "Automatically resize the widget height based on the content. When disabled, the widget will fill the height of the container."
@@ -813,6 +825,10 @@ msgstr "Rechnungsadresse"
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:167
 msgid "Billing Settings"
 msgstr "Rechnungseinstellungen"
+
+#: src/components/layouts/AuthLayout/index.tsx:82
+msgid "Brand Control"
+msgstr "Markenkontrolle"
 
 #: src/components/common/LanguageSwitcher/index.tsx:24
 msgid "Brazilian Portuguese"
@@ -1120,6 +1136,10 @@ msgstr "Jetzt bezahlen"
 msgid "Complete Payment"
 msgstr "Jetzt bezahlen"
 
+#: src/components/layouts/AuthLayout/index.tsx:67
+msgid "Complete Store"
+msgstr "Vollständiger Shop"
+
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:153
 msgid "Complete Stripe Setup"
 msgstr "Stripe-Einrichtung abschließen"
@@ -1179,6 +1199,10 @@ msgstr "Verbindungsdokumentation"
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:52
 #~ msgid "Connect Stripe"
 #~ msgstr "Stripe verbinden"
+
+#: src/components/layouts/AuthLayout/index.tsx:88
+msgid "Connect with CRM and automate tasks using webhooks and integrations"
+msgstr "Verbinden Sie sich mit dem CRM und automatisieren Sie Aufgaben mit Webhooks und Integrationen"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:152
 #: src/components/routes/event/GettingStarted/index.tsx:126
@@ -1304,7 +1328,7 @@ msgstr "Erstellen Sie ein Konto oder <0>{0}</0>, um loszulegen"
 msgid "create an organizer"
 msgstr "einen Organizer erstellen"
 
-#: src/components/layouts/AuthLayout/index.tsx:56
+#: src/components/layouts/AuthLayout/index.tsx:27
 msgid "Create and customize your event page instantly"
 msgstr "Erstellen und personalisieren Sie Ihre Veranstaltungsseite sofort"
 
@@ -1437,6 +1461,10 @@ msgstr "Passen Sie die SEO-Einstellungen für dieses Event an"
 #: src/components/routes/event/GettingStarted/index.tsx:99
 msgid "Customize your event page"
 msgstr "Passen Sie Ihre Veranstaltungsseite an"
+
+#: src/components/layouts/AuthLayout/index.tsx:83
+msgid "Customize your event page and widget design to match your brand perfectly"
+msgstr "Passen Sie Ihre Veranstaltungsseite und das Widget-Design perfekt an Ihre Marke an"
 
 #: src/components/routes/event/GettingStarted/index.tsx:95
 msgid "Customize your event page to match your brand and style."
@@ -2164,6 +2192,10 @@ msgstr "Feste Gebühr:"
 msgid "Flash is not available on this device"
 msgstr "Flash ist auf diesem Gerät nicht verfügbar"
 
+#: src/components/layouts/AuthLayout/index.tsx:57
+msgid "Flexible Ticketing"
+msgstr "Flexibles Ticketing"
+
 #: src/components/routes/auth/Login/index.tsx:80
 msgid "Forgot password?"
 msgstr "Passwort vergessen?"
@@ -2206,7 +2238,7 @@ msgstr "Allgemein"
 msgid "German"
 msgstr "Deutsch"
 
-#: src/components/layouts/AuthLayout/index.tsx:64
+#: src/components/layouts/AuthLayout/index.tsx:35
 msgid "Get started for free, no subscription fees"
 msgstr "Starten Sie kostenlos, keine Abonnementgebühren"
 
@@ -2285,7 +2317,7 @@ msgstr "Hi.Events-Konferenz {0}"
 msgid "Hi.Events Conference Center"
 msgstr "Hi.Events Konferenzzentrum"
 
-#: src/components/layouts/AuthLayout/index.tsx:21
+#: src/components/layouts/AuthLayout/index.tsx:131
 msgid "hi.events logo"
 msgstr "hi.events-Logo"
 
@@ -2817,6 +2849,10 @@ msgstr "Nachricht an Teilnehmer mit bestimmten Produkten senden"
 #~ msgid "Message attendees with specific tickets"
 #~ msgstr "Teilnehmer mit bestimmten Tickets benachrichtigen"
 
+#: src/components/layouts/AuthLayout/index.tsx:73
+msgid "Message attendees, manage orders, and handle refunds all in one place"
+msgstr "Kommunizieren Sie mit Teilnehmern, verwalten Sie Bestellungen und bearbeiten Sie Rückerstattungen an einem Ort"
+
 #: src/components/common/OrdersTable/index.tsx:158
 msgid "Message buyer"
 msgstr "Nachricht an den Käufer"
@@ -2853,6 +2889,10 @@ msgstr "Sonstiges"
 #: src/components/routes/event/Settings/Sections/MiscSettings/index.tsx:69
 msgid "Miscellaneous Settings"
 msgstr "Verschiedene Einstellungen"
+
+#: src/components/layouts/AuthLayout/index.tsx:62
+msgid "Mobile Check-in"
+msgstr "Mobiler Check-in"
 
 #: src/components/forms/QuestionForm/index.tsx:106
 msgid "Multi line text box"
@@ -2958,7 +2998,7 @@ msgstr "Keine Kapazitätszuweisungen"
 msgid "No Check-In Lists"
 msgstr "Keine Einchecklisten"
 
-#: src/components/layouts/AuthLayout/index.tsx:63
+#: src/components/layouts/AuthLayout/index.tsx:34
 msgid "No Credit Card Required"
 msgstr "Keine Kreditkarte erforderlich"
 
@@ -3765,7 +3805,7 @@ msgstr "Verkaufte Produkte"
 msgid "Products sorted successfully"
 msgstr "Produkte erfolgreich sortiert"
 
-#: src/components/layouts/AuthLayout/index.tsx:72
+#: src/components/layouts/AuthLayout/index.tsx:43
 msgid "Products, merchandise, and flexible pricing options"
 msgstr "Produkte, Waren und flexible Preisoptionen"
 
@@ -3815,6 +3855,10 @@ msgstr "Geben Sie zusätzlichen Kontext oder Anweisungen für diese Frage an. Ve
 #: src/components/modals/ShareModal/index.tsx:126
 msgid "QR Code"
 msgstr "QR-Code"
+
+#: src/components/layouts/AuthLayout/index.tsx:63
+msgid "QR code scanning with instant feedback and secure sharing for staff access"
+msgstr "QR-Code-Scanning mit sofortigem Feedback und sicherem Teilen für den Mitarbeiterzugang"
 
 #: src/components/forms/ProductForm/index.tsx:85
 #: src/components/forms/ProductForm/index.tsx:302
@@ -4189,7 +4233,11 @@ msgstr "Wählen Sie aus, welche Ereignisse diesen Webhook auslösen"
 msgid "Select..."
 msgstr "Wählen..."
 
-#: src/components/layouts/AuthLayout/index.tsx:71
+#: src/components/layouts/AuthLayout/index.tsx:68
+msgid "Sell merchandise alongside tickets with integrated tax and promo code support"
+msgstr "Verkaufen Sie Merchandise neben Tickets mit integrierter Steuer- und Promo-Code-Unterstützung"
+
+#: src/components/layouts/AuthLayout/index.tsx:42
 msgid "Sell More Than Tickets"
 msgstr "Verkaufen Sie mehr als nur Tickets"
 
@@ -4270,7 +4318,7 @@ msgstr "Schalten Sie Ihr Event live"
 msgid "Settings"
 msgstr "Einstellungen"
 
-#: src/components/layouts/AuthLayout/index.tsx:55
+#: src/components/layouts/AuthLayout/index.tsx:26
 msgid "Setup in Minutes"
 msgstr "Einrichtung in Minuten"
 
@@ -4373,6 +4421,14 @@ msgstr "Einzeiliges Textfeld"
 #: src/components/routes/welcome/index.tsx:137
 msgid "Skip this step"
 msgstr "Überspringe diesen Schritt"
+
+#: src/components/layouts/AuthLayout/index.tsx:77
+msgid "Smart Check-in"
+msgstr "Intelligenter Check-in"
+
+#: src/components/layouts/AuthLayout/index.tsx:52
+msgid "Smart Dashboard"
+msgstr "Intelligentes Dashboard"
 
 #: src/components/routes/auth/Register/index.tsx:90
 msgid "Smith"
@@ -4616,6 +4672,10 @@ msgstr "Suite 100"
 #: src/components/routes/event/Settings/Sections/EmailSettings/index.tsx:62
 msgid "Support Email"
 msgstr "Support-E-Mail"
+
+#: src/components/layouts/AuthLayout/index.tsx:58
+msgid "Support for tiered, donation-based, and product sales with customizable pricing and capacity"
+msgstr "Unterstützung für gestaffelte, spendenbasierte und Produktverkäufe mit anpassbaren Preisen und Kapazitäten"
 
 #: src/components/forms/ProductForm/index.tsx:254
 msgid "T-shirt"
@@ -5099,6 +5159,10 @@ msgstr "Verbleibender Gesamtbetrag"
 #: src/components/routes/event/EventDashboard/index.tsx:143
 msgid "Total Tax"
 msgstr "Gesamtsteuer"
+
+#: src/components/layouts/AuthLayout/index.tsx:53
+msgid "Track revenue, page views, and sales with detailed analytics and exportable reports"
+msgstr "Verfolgen Sie Einnahmen, Seitenaufrufe und Verkäufe mit detaillierten Analysen und exportierbaren Berichten"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:51
 msgid "Transaction Fee:"
