--- a/frontend/src/locales/en.po
+++ b/frontend/src/locales/en.po
@@ -753,6 +753,10 @@ msgstr "Attendee Created"
 msgid "Attendee Details"
 msgstr "Attendee Details"
 
+#: src/components/layouts/AuthLayout/index.tsx:72
+msgid "Attendee Management"
+msgstr "Attendee Management"
+
 #: src/components/layouts/CheckIn/index.tsx:140
 msgid "Attendee not found"
 msgstr "Attendee not found"
@@ -809,6 +813,14 @@ msgstr "Attendees with a specific product"
 #: src/components/common/WidgetEditor/index.tsx:233
 msgid "Auto Resize"
 msgstr "Auto Resize"
+
+#: src/components/layouts/AuthLayout/index.tsx:87
+msgid "Auto Workflow"
+msgstr "Auto Workflow"
+
+#: src/components/layouts/AuthLayout/index.tsx:78
+msgid "Automated entry management with multiple check-in lists and real-time validation"
+msgstr "Automated entry management with multiple check-in lists and real-time validation"
 
 #: src/components/common/WidgetEditor/index.tsx:236
 msgid "Automatically resize the widget height based on the content. When disabled, the widget will fill the height of the container."
@@ -931,6 +943,10 @@ msgstr "Billing Address"
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:167
 msgid "Billing Settings"
 msgstr "Billing Settings"
+
+#: src/components/layouts/AuthLayout/index.tsx:82
+msgid "Brand Control"
+msgstr "Brand Control"
 
 #: src/components/common/LanguageSwitcher/index.tsx:24
 msgid "Brazilian Portuguese"
@@ -1255,6 +1271,10 @@ msgstr "Complete payment"
 msgid "Complete Payment"
 msgstr "Complete Payment"
 
+#: src/components/layouts/AuthLayout/index.tsx:67
+msgid "Complete Store"
+msgstr "Complete Store"
+
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:153
 msgid "Complete Stripe Setup"
 msgstr "Complete Stripe Setup"
@@ -1318,6 +1338,10 @@ msgstr "Connect Documentation"
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:52
 #~ msgid "Connect Stripe"
 #~ msgstr "Connect Stripe"
+
+#: src/components/layouts/AuthLayout/index.tsx:88
+msgid "Connect with CRM and automate tasks using webhooks and integrations"
+msgstr "Connect with CRM and automate tasks using webhooks and integrations"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:152
 #: src/components/routes/event/GettingStarted/index.tsx:126
@@ -1451,7 +1475,7 @@ msgstr "Create an account or <0>{0}</0> to get started"
 msgid "create an organizer"
 msgstr "create an organizer"
 
-#: src/components/layouts/AuthLayout/index.tsx:56
+#: src/components/layouts/AuthLayout/index.tsx:27
 msgid "Create and customize your event page instantly"
 msgstr "Create and customize your event page instantly"
 
@@ -1600,6 +1624,10 @@ msgstr "Customize the SEO settings for this event"
 #: src/components/routes/event/GettingStarted/index.tsx:99
 msgid "Customize your event page"
 msgstr "Customize your event page"
+
+#: src/components/layouts/AuthLayout/index.tsx:83
+msgid "Customize your event page and widget design to match your brand perfectly"
+msgstr "Customize your event page and widget design to match your brand perfectly"
 
 #: src/components/routes/event/GettingStarted/index.tsx:95
 msgid "Customize your event page to match your brand and style."
@@ -2383,6 +2411,10 @@ msgstr "Fixed Fee:"
 msgid "Flash is not available on this device"
 msgstr "Flash is not available on this device"
 
+#: src/components/layouts/AuthLayout/index.tsx:57
+msgid "Flexible Ticketing"
+msgstr "Flexible Ticketing"
+
 #: src/components/routes/auth/Login/index.tsx:80
 msgid "Forgot password?"
 msgstr "Forgot password?"
@@ -2429,7 +2461,7 @@ msgstr "General"
 msgid "German"
 msgstr "German"
 
-#: src/components/layouts/AuthLayout/index.tsx:64
+#: src/components/layouts/AuthLayout/index.tsx:35
 msgid "Get started for free, no subscription fees"
 msgstr "Get started for free, no subscription fees"
 
@@ -2516,7 +2548,7 @@ msgstr "Hi.Events Conference {0}"
 msgid "Hi.Events Conference Center"
 msgstr "Hi.Events Conference Center"
 
-#: src/components/layouts/AuthLayout/index.tsx:21
+#: src/components/layouts/AuthLayout/index.tsx:131
 msgid "hi.events logo"
 msgstr "hi.events logo"
 
@@ -3142,6 +3174,10 @@ msgstr "Message attendees with specific products"
 #~ msgid "Message attendees with specific tickets"
 #~ msgstr "Message attendees with specific tickets"
 
+#: src/components/layouts/AuthLayout/index.tsx:73
+msgid "Message attendees, manage orders, and handle refunds all in one place"
+msgstr "Message attendees, manage orders, and handle refunds all in one place"
+
 #: src/components/common/OrdersTable/index.tsx:158
 msgid "Message buyer"
 msgstr "Message buyer"
@@ -3178,6 +3214,10 @@ msgstr "Miscellaneous"
 #: src/components/routes/event/Settings/Sections/MiscSettings/index.tsx:69
 msgid "Miscellaneous Settings"
 msgstr "Miscellaneous Settings"
+
+#: src/components/layouts/AuthLayout/index.tsx:62
+msgid "Mobile Check-in"
+msgstr "Mobile Check-in"
 
 #: src/components/forms/QuestionForm/index.tsx:106
 msgid "Multi line text box"
@@ -3292,7 +3332,7 @@ msgstr "No Capacity Assignments"
 msgid "No Check-In Lists"
 msgstr "No Check-In Lists"
 
-#: src/components/layouts/AuthLayout/index.tsx:63
+#: src/components/layouts/AuthLayout/index.tsx:34
 msgid "No Credit Card Required"
 msgstr "No Credit Card Required"
 
@@ -4163,7 +4203,7 @@ msgstr "Products Sold"
 msgid "Products sorted successfully"
 msgstr "Products sorted successfully"
 
-#: src/components/layouts/AuthLayout/index.tsx:72
+#: src/components/layouts/AuthLayout/index.tsx:43
 msgid "Products, merchandise, and flexible pricing options"
 msgstr "Products, merchandise, and flexible pricing options"
 
@@ -4219,6 +4259,10 @@ msgstr ""
 #: src/components/modals/ShareModal/index.tsx:126
 msgid "QR Code"
 msgstr "QR Code"
+
+#: src/components/layouts/AuthLayout/index.tsx:63
+msgid "QR code scanning with instant feedback and secure sharing for staff access"
+msgstr "QR code scanning with instant feedback and secure sharing for staff access"
 
 #: src/components/forms/ProductForm/index.tsx:85
 #: src/components/forms/ProductForm/index.tsx:302
@@ -4622,7 +4666,11 @@ msgstr "Select which events will trigger this webhook"
 msgid "Select..."
 msgstr "Select..."
 
-#: src/components/layouts/AuthLayout/index.tsx:71
+#: src/components/layouts/AuthLayout/index.tsx:68
+msgid "Sell merchandise alongside tickets with integrated tax and promo code support"
+msgstr "Sell merchandise alongside tickets with integrated tax and promo code support"
+
+#: src/components/layouts/AuthLayout/index.tsx:42
 msgid "Sell More Than Tickets"
 msgstr "Sell More Than Tickets"
 
@@ -4711,7 +4759,7 @@ msgstr "Set your event live"
 msgid "Settings"
 msgstr "Settings"
 
-#: src/components/layouts/AuthLayout/index.tsx:55
+#: src/components/layouts/AuthLayout/index.tsx:26
 msgid "Setup in Minutes"
 msgstr "Setup in Minutes"
 
@@ -4818,6 +4866,14 @@ msgstr "Single line text box"
 #: src/components/routes/welcome/index.tsx:137
 msgid "Skip this step"
 msgstr "Skip this step"
+
+#: src/components/layouts/AuthLayout/index.tsx:77
+msgid "Smart Check-in"
+msgstr "Smart Check-in"
+
+#: src/components/layouts/AuthLayout/index.tsx:52
+msgid "Smart Dashboard"
+msgstr "Smart Dashboard"
 
 #: src/components/routes/auth/Register/index.tsx:90
 msgid "Smith"
@@ -5077,6 +5133,10 @@ msgstr "Suite 100"
 #: src/components/routes/event/Settings/Sections/EmailSettings/index.tsx:62
 msgid "Support Email"
 msgstr "Support Email"
+
+#: src/components/layouts/AuthLayout/index.tsx:58
+msgid "Support for tiered, donation-based, and product sales with customizable pricing and capacity"
+msgstr "Support for tiered, donation-based, and product sales with customizable pricing and capacity"
 
 #: src/components/forms/ProductForm/index.tsx:254
 msgid "T-shirt"
@@ -5701,6 +5761,10 @@ msgstr "Total remaining"
 #: src/components/routes/event/EventDashboard/index.tsx:143
 msgid "Total Tax"
 msgstr "Total Tax"
+
+#: src/components/layouts/AuthLayout/index.tsx:53
+msgid "Track revenue, page views, and sales with detailed analytics and exportable reports"
+msgstr "Track revenue, page views, and sales with detailed analytics and exportable reports"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:51
 msgid "Transaction Fee:"
