--- a/frontend/src/locales/es.po
+++ b/frontend/src/locales/es.po
@@ -22,7 +22,7 @@ msgstr "'No hay nada que mostrar todavía'"
 #~ "\"\"If you have an account with us, you will receive an email with instructions on how to reset your\n"
 #~ "\"\"password."
 #~ msgstr ""
-#~ "\"\"Si tienes una cuenta con nosotros, recibirás un correo con instrucciones para restablecer tu\n"
+#~ "\"\"Si tiene una cuenta con nosotros, recibirá un correo electrónico con instrucciones para restablecer su\n"
 #~ "\"\"contraseña.\"\""
 
 #: src/components/common/ReportTable/index.tsx:303
@@ -673,6 +673,10 @@ msgstr "Asistente creado"
 msgid "Attendee Details"
 msgstr "Detalles de los asistentes"
 
+#: src/components/layouts/AuthLayout/index.tsx:72
+msgid "Attendee Management"
+msgstr "Gestión de asistentes"
+
 #: src/components/layouts/CheckIn/index.tsx:140
 msgid "Attendee not found"
 msgstr "Asistente no encontrado"
@@ -721,6 +725,14 @@ msgstr "Asistentes con un producto específico"
 #: src/components/common/WidgetEditor/index.tsx:233
 msgid "Auto Resize"
 msgstr "Cambio de tamaño automático"
+
+#: src/components/layouts/AuthLayout/index.tsx:87
+msgid "Auto Workflow"
+msgstr "Flujo de trabajo automatizado"
+
+#: src/components/layouts/AuthLayout/index.tsx:78
+msgid "Automated entry management with multiple check-in lists and real-time validation"
+msgstr "Gestión automatizada de entradas con múltiples listas de registro y validación en tiempo real"
 
 #: src/components/common/WidgetEditor/index.tsx:236
 msgid "Automatically resize the widget height based on the content. When disabled, the widget will fill the height of the container."
@@ -813,6 +825,10 @@ msgstr "Dirección de facturación"
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:167
 msgid "Billing Settings"
 msgstr "Configuración de facturación"
+
+#: src/components/layouts/AuthLayout/index.tsx:82
+msgid "Brand Control"
+msgstr "Control de marca"
 
 #: src/components/common/LanguageSwitcher/index.tsx:24
 msgid "Brazilian Portuguese"
@@ -1120,6 +1136,10 @@ msgstr "El pago completo"
 msgid "Complete Payment"
 msgstr "El pago completo"
 
+#: src/components/layouts/AuthLayout/index.tsx:67
+msgid "Complete Store"
+msgstr "Tienda completa"
+
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:153
 msgid "Complete Stripe Setup"
 msgstr "Completar configuración de Stripe"
@@ -1179,6 +1199,10 @@ msgstr "Documentación de conexión"
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:52
 #~ msgid "Connect Stripe"
 #~ msgstr "Conectar raya"
+
+#: src/components/layouts/AuthLayout/index.tsx:88
+msgid "Connect with CRM and automate tasks using webhooks and integrations"
+msgstr "Conéctese con el CRM y automatice tareas mediante webhooks e integraciones"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:152
 #: src/components/routes/event/GettingStarted/index.tsx:126
@@ -1304,7 +1328,7 @@ msgstr "Cree una cuenta o <0>{0}</0> para comenzar"
 msgid "create an organizer"
 msgstr "crear un organizador"
 
-#: src/components/layouts/AuthLayout/index.tsx:56
+#: src/components/layouts/AuthLayout/index.tsx:27
 msgid "Create and customize your event page instantly"
 msgstr "Crea y personaliza tu página de evento al instante"
 
@@ -1437,6 +1461,10 @@ msgstr "Personaliza la configuración de SEO para este evento"
 #: src/components/routes/event/GettingStarted/index.tsx:99
 msgid "Customize your event page"
 msgstr "Personaliza la página de tu evento"
+
+#: src/components/layouts/AuthLayout/index.tsx:83
+msgid "Customize your event page and widget design to match your brand perfectly"
+msgstr "Personalice su página de evento y el diseño del widget para que coincida perfectamente con su marca"
 
 #: src/components/routes/event/GettingStarted/index.tsx:95
 msgid "Customize your event page to match your brand and style."
@@ -2164,6 +2192,10 @@ msgstr "Tarifa fija:"
 msgid "Flash is not available on this device"
 msgstr "Flash no está disponible en este dispositivo"
 
+#: src/components/layouts/AuthLayout/index.tsx:57
+msgid "Flexible Ticketing"
+msgstr "Venta de entradas flexible"
+
 #: src/components/routes/auth/Login/index.tsx:80
 msgid "Forgot password?"
 msgstr "¿Has olvidado tu contraseña?"
@@ -2206,7 +2238,7 @@ msgstr "General"
 msgid "German"
 msgstr "Alemán"
 
-#: src/components/layouts/AuthLayout/index.tsx:64
+#: src/components/layouts/AuthLayout/index.tsx:35
 msgid "Get started for free, no subscription fees"
 msgstr "Comienza gratis, sin tarifas de suscripción"
 
@@ -2285,7 +2317,7 @@ msgstr "Hola.Eventos Conferencia {0}"
 msgid "Hi.Events Conference Center"
 msgstr "Centro de conferencias Hi.Events"
 
-#: src/components/layouts/AuthLayout/index.tsx:21
+#: src/components/layouts/AuthLayout/index.tsx:131
 msgid "hi.events logo"
 msgstr "hola.eventos logo"
 
@@ -2817,6 +2849,10 @@ msgstr "Enviar mensaje a asistentes con productos específicos"
 #~ msgid "Message attendees with specific tickets"
 #~ msgstr "Enviar mensajes a los asistentes con entradas específicas"
 
+#: src/components/layouts/AuthLayout/index.tsx:73
+msgid "Message attendees, manage orders, and handle refunds all in one place"
+msgstr "Envíe mensajes a los asistentes, gestione pedidos y procese reembolsos en un solo lugar"
+
 #: src/components/common/OrdersTable/index.tsx:158
 msgid "Message buyer"
 msgstr "Mensaje del comprador"
@@ -2853,6 +2889,10 @@ msgstr "Misceláneo"
 #: src/components/routes/event/Settings/Sections/MiscSettings/index.tsx:69
 msgid "Miscellaneous Settings"
 msgstr "Otras configuraciones"
+
+#: src/components/layouts/AuthLayout/index.tsx:62
+msgid "Mobile Check-in"
+msgstr "Registro móvil"
 
 #: src/components/forms/QuestionForm/index.tsx:106
 msgid "Multi line text box"
@@ -2958,7 +2998,7 @@ msgstr "No hay Asignaciones de Capacidad"
 msgid "No Check-In Lists"
 msgstr "No hay listas de registro"
 
-#: src/components/layouts/AuthLayout/index.tsx:63
+#: src/components/layouts/AuthLayout/index.tsx:34
 msgid "No Credit Card Required"
 msgstr "No se requiere tarjeta de crédito"
 
@@ -3765,7 +3805,7 @@ msgstr "Productos vendidos"
 msgid "Products sorted successfully"
 msgstr "Productos ordenados con éxito"
 
-#: src/components/layouts/AuthLayout/index.tsx:72
+#: src/components/layouts/AuthLayout/index.tsx:43
 msgid "Products, merchandise, and flexible pricing options"
 msgstr "Productos, mercancía y opciones de precios flexibles"
 
@@ -3815,6 +3855,10 @@ msgstr "Proporcione contexto adicional o instrucciones para esta pregunta. Utili
 #: src/components/modals/ShareModal/index.tsx:126
 msgid "QR Code"
 msgstr "Código QR"
+
+#: src/components/layouts/AuthLayout/index.tsx:63
+msgid "QR code scanning with instant feedback and secure sharing for staff access"
+msgstr "Escaneo de códigos QR con retroalimentación instantánea y uso compartido seguro para el acceso del personal"
 
 #: src/components/forms/ProductForm/index.tsx:85
 #: src/components/forms/ProductForm/index.tsx:302
@@ -4189,7 +4233,11 @@ msgstr "Selecciona qué eventos activarán este webhook"
 msgid "Select..."
 msgstr "Seleccionar..."
 
-#: src/components/layouts/AuthLayout/index.tsx:71
+#: src/components/layouts/AuthLayout/index.tsx:68
+msgid "Sell merchandise alongside tickets with integrated tax and promo code support"
+msgstr "Venda productos junto con boletos con soporte integrado para impuestos y códigos promocionales"
+
+#: src/components/layouts/AuthLayout/index.tsx:42
 msgid "Sell More Than Tickets"
 msgstr "Vende más que boletos"
 
@@ -4270,7 +4318,7 @@ msgstr "Configura tu evento en vivo"
 msgid "Settings"
 msgstr "Ajustes"
 
-#: src/components/layouts/AuthLayout/index.tsx:55
+#: src/components/layouts/AuthLayout/index.tsx:26
 msgid "Setup in Minutes"
 msgstr "Configura en minutos"
 
@@ -4373,6 +4421,14 @@ msgstr "Cuadro de texto de una sola línea"
 #: src/components/routes/welcome/index.tsx:137
 msgid "Skip this step"
 msgstr "Salta este paso"
+
+#: src/components/layouts/AuthLayout/index.tsx:77
+msgid "Smart Check-in"
+msgstr "Registro inteligente"
+
+#: src/components/layouts/AuthLayout/index.tsx:52
+msgid "Smart Dashboard"
+msgstr "Panel de control inteligente"
 
 #: src/components/routes/auth/Register/index.tsx:90
 msgid "Smith"
@@ -4616,6 +4672,10 @@ msgstr "habitación 100"
 #: src/components/routes/event/Settings/Sections/EmailSettings/index.tsx:62
 msgid "Support Email"
 msgstr "Correo electrónico de soporte"
+
+#: src/components/layouts/AuthLayout/index.tsx:58
+msgid "Support for tiered, donation-based, and product sales with customizable pricing and capacity"
+msgstr "Soporte para ventas escalonadas, basadas en donaciones y de productos con precios y capacidad personalizables"
 
 #: src/components/forms/ProductForm/index.tsx:254
 msgid "T-shirt"
@@ -5099,6 +5159,10 @@ msgstr "Total restante"
 #: src/components/routes/event/EventDashboard/index.tsx:143
 msgid "Total Tax"
 msgstr "Total impuestos"
+
+#: src/components/layouts/AuthLayout/index.tsx:53
+msgid "Track revenue, page views, and sales with detailed analytics and exportable reports"
+msgstr "Realice un seguimiento de los ingresos, las visitas a la página y las ventas con análisis detallados e informes exportables"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:51
 msgid "Transaction Fee:"
