--- a/frontend/src/locales/fr.po
+++ b/frontend/src/locales/fr.po
@@ -673,6 +673,10 @@ msgstr "Participant créé"
 msgid "Attendee Details"
 msgstr "Détails des participants"
 
+#: src/components/layouts/AuthLayout/index.tsx:72
+msgid "Attendee Management"
+msgstr ""
+
 #: src/components/layouts/CheckIn/index.tsx:140
 msgid "Attendee not found"
 msgstr "Participant non trouvé"
@@ -721,6 +725,14 @@ msgstr "Invités avec un produit spécifique"
 #: src/components/common/WidgetEditor/index.tsx:233
 msgid "Auto Resize"
 msgstr "Redimensionnement automatique"
+
+#: src/components/layouts/AuthLayout/index.tsx:87
+msgid "Auto Workflow"
+msgstr "Flux de travail automatisé"
+
+#: src/components/layouts/AuthLayout/index.tsx:78
+msgid "Automated entry management with multiple check-in lists and real-time validation"
+msgstr "Gestion automatisée des entrées avec plusieurs listes d'enregistrement et validation en temps réel"
 
 #: src/components/common/WidgetEditor/index.tsx:236
 msgid "Automatically resize the widget height based on the content. When disabled, the widget will fill the height of the container."
@@ -813,6 +825,10 @@ msgstr "Adresse de facturation"
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:167
 msgid "Billing Settings"
 msgstr "Paramètres de facturation"
+
+#: src/components/layouts/AuthLayout/index.tsx:82
+msgid "Brand Control"
+msgstr "Contrôle de la marque"
 
 #: src/components/common/LanguageSwitcher/index.tsx:24
 msgid "Brazilian Portuguese"
@@ -1120,6 +1136,10 @@ msgstr "Paiement complet"
 msgid "Complete Payment"
 msgstr "Paiement complet"
 
+#: src/components/layouts/AuthLayout/index.tsx:67
+msgid "Complete Store"
+msgstr "Boutique complète"
+
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:153
 msgid "Complete Stripe Setup"
 msgstr "Finaliser la configuration de Stripe"
@@ -1179,6 +1199,10 @@ msgstr "Documentation de connexion"
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:52
 #~ msgid "Connect Stripe"
 #~ msgstr "Connecter la bande"
+
+#: src/components/layouts/AuthLayout/index.tsx:88
+msgid "Connect with CRM and automate tasks using webhooks and integrations"
+msgstr "Connectez-vous au CRM et automatisez les tâches à l'aide de webhooks et d'intégrations"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:152
 #: src/components/routes/event/GettingStarted/index.tsx:126
@@ -1304,7 +1328,7 @@ msgstr "Créez un compte ou <0>{0}</0> pour commencer"
 msgid "create an organizer"
 msgstr "créer un organisateur"
 
-#: src/components/layouts/AuthLayout/index.tsx:56
+#: src/components/layouts/AuthLayout/index.tsx:27
 msgid "Create and customize your event page instantly"
 msgstr "Créez et personnalisez votre page d'événement instantanément"
 
@@ -1437,6 +1461,10 @@ msgstr "Personnalisez les paramètres SEO pour cet événement"
 #: src/components/routes/event/GettingStarted/index.tsx:99
 msgid "Customize your event page"
 msgstr "Personnalisez votre page d'événement"
+
+#: src/components/layouts/AuthLayout/index.tsx:83
+msgid "Customize your event page and widget design to match your brand perfectly"
+msgstr "Personnalisez votre page événement et la conception du widget pour correspondre parfaitement à votre marque"
 
 #: src/components/routes/event/GettingStarted/index.tsx:95
 msgid "Customize your event page to match your brand and style."
@@ -2165,6 +2193,10 @@ msgstr "Frais fixes :"
 msgid "Flash is not available on this device"
 msgstr "Flash n'est pas disponible sur cet appareil"
 
+#: src/components/layouts/AuthLayout/index.tsx:57
+msgid "Flexible Ticketing"
+msgstr "Billetterie flexible"
+
 #: src/components/routes/auth/Login/index.tsx:80
 msgid "Forgot password?"
 msgstr "Mot de passe oublié?"
@@ -2207,7 +2239,7 @@ msgstr "Général"
 msgid "German"
 msgstr "Allemand"
 
-#: src/components/layouts/AuthLayout/index.tsx:64
+#: src/components/layouts/AuthLayout/index.tsx:35
 msgid "Get started for free, no subscription fees"
 msgstr "Commencez gratuitement, sans frais d'abonnement"
 
@@ -2286,7 +2318,7 @@ msgstr "Conférence Hi.Events {0}"
 msgid "Hi.Events Conference Center"
 msgstr "Centre de conférence Hi.Events"
 
-#: src/components/layouts/AuthLayout/index.tsx:21
+#: src/components/layouts/AuthLayout/index.tsx:131
 msgid "hi.events logo"
 msgstr "logo hi.events"
 
@@ -2818,6 +2850,10 @@ msgstr "Envoyer un message aux invités avec des produits spécifiques"
 #~ msgid "Message attendees with specific tickets"
 #~ msgstr "Envoyez des messages aux participants avec des billets spécifiques"
 
+#: src/components/layouts/AuthLayout/index.tsx:73
+msgid "Message attendees, manage orders, and handle refunds all in one place"
+msgstr "Envoyez des messages aux participants, gérez les commandes et traitez les remboursements en un seul endroit"
+
 #: src/components/common/OrdersTable/index.tsx:158
 msgid "Message buyer"
 msgstr "Message à l'acheteur"
@@ -2854,6 +2890,10 @@ msgstr "Divers"
 #: src/components/routes/event/Settings/Sections/MiscSettings/index.tsx:69
 msgid "Miscellaneous Settings"
 msgstr "Paramètres divers"
+
+#: src/components/layouts/AuthLayout/index.tsx:62
+msgid "Mobile Check-in"
+msgstr "Enregistrement mobile"
 
 #: src/components/forms/QuestionForm/index.tsx:106
 msgid "Multi line text box"
@@ -2959,7 +2999,7 @@ msgstr "Aucune Affectation de Capacité"
 msgid "No Check-In Lists"
 msgstr "Pas de listes de pointage"
 
-#: src/components/layouts/AuthLayout/index.tsx:63
+#: src/components/layouts/AuthLayout/index.tsx:34
 msgid "No Credit Card Required"
 msgstr "Aucune carte de crédit requise"
 
@@ -3766,7 +3806,7 @@ msgstr "Produits vendus"
 msgid "Products sorted successfully"
 msgstr "Produits triés avec succès"
 
-#: src/components/layouts/AuthLayout/index.tsx:72
+#: src/components/layouts/AuthLayout/index.tsx:43
 msgid "Products, merchandise, and flexible pricing options"
 msgstr "Produits, marchandises et options de tarification flexibles"
 
@@ -3816,6 +3856,10 @@ msgstr "Fournissez un contexte ou des instructions supplémentaires pour cette q
 #: src/components/modals/ShareModal/index.tsx:126
 msgid "QR Code"
 msgstr "Code QR"
+
+#: src/components/layouts/AuthLayout/index.tsx:63
+msgid "QR code scanning with instant feedback and secure sharing for staff access"
+msgstr "Scan de QR code avec retour instantané et partage sécurisé pour l'accès du personnel"
 
 #: src/components/forms/ProductForm/index.tsx:85
 #: src/components/forms/ProductForm/index.tsx:302
@@ -4190,7 +4234,11 @@ msgstr "Sélectionnez les événements qui déclencheront ce webhook"
 msgid "Select..."
 msgstr "Sélectionner..."
 
-#: src/components/layouts/AuthLayout/index.tsx:71
+#: src/components/layouts/AuthLayout/index.tsx:68
+msgid "Sell merchandise alongside tickets with integrated tax and promo code support"
+msgstr "Vendez des articles en plus des billets avec support intégré pour les taxes et les codes promotionnels"
+
+#: src/components/layouts/AuthLayout/index.tsx:42
 msgid "Sell More Than Tickets"
 msgstr "Vendez plus que des billets"
 
@@ -4271,7 +4319,7 @@ msgstr "Mettez votre événement en direct"
 msgid "Settings"
 msgstr "Paramètres"
 
-#: src/components/layouts/AuthLayout/index.tsx:55
+#: src/components/layouts/AuthLayout/index.tsx:26
 msgid "Setup in Minutes"
 msgstr "Configuration en quelques minutes"
 
@@ -4374,6 +4422,14 @@ msgstr "Zone de texte sur une seule ligne"
 #: src/components/routes/welcome/index.tsx:137
 msgid "Skip this step"
 msgstr "Passer cette étape"
+
+#: src/components/layouts/AuthLayout/index.tsx:77
+msgid "Smart Check-in"
+msgstr "Enregistrement intelligent"
+
+#: src/components/layouts/AuthLayout/index.tsx:52
+msgid "Smart Dashboard"
+msgstr "Tableau de bord intelligent"
 
 #: src/components/routes/auth/Register/index.tsx:90
 msgid "Smith"
@@ -4617,6 +4673,10 @@ msgstr "Suite 100"
 #: src/components/routes/event/Settings/Sections/EmailSettings/index.tsx:62
 msgid "Support Email"
 msgstr "E-mail d'assistance"
+
+#: src/components/layouts/AuthLayout/index.tsx:58
+msgid "Support for tiered, donation-based, and product sales with customizable pricing and capacity"
+msgstr "Prise en charge des ventes par paliers, basées sur les dons et de produits avec des prix et des capacités personnalisables"
 
 #: src/components/forms/ProductForm/index.tsx:254
 msgid "T-shirt"
@@ -5104,6 +5164,10 @@ msgstr "Total restant"
 #: src/components/routes/event/EventDashboard/index.tsx:143
 msgid "Total Tax"
 msgstr "Taxe total"
+
+#: src/components/layouts/AuthLayout/index.tsx:53
+msgid "Track revenue, page views, and sales with detailed analytics and exportable reports"
+msgstr "Suivez les revenus, les vues de page et les ventes avec des analyses détaillées et des rapports exportables"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:51
 msgid "Transaction Fee:"
