--- a/frontend/src/locales/zh-cn.po
+++ b/frontend/src/locales/zh-cn.po
@@ -22,7 +22,7 @@ msgstr "There's nothing to show yet"
 #~ "\"\"If you have an account with us, you will receive an email with instructions on how to reset your\n"
 #~ "\"\"password."
 #~ msgstr ""
-#~ "\"\"如果您有我们的账户，您将收到一封电子邮件，其中包含重置\n"
+#~ "\"\"如果您拥有我们的账户，您将收到一封电子邮件，其中包含重置您的\n"
 #~ "\"\"密码的说明。\"\""
 
 #: src/components/common/ReportTable/index.tsx:303
@@ -673,6 +673,10 @@ msgstr "与会者已创建"
 msgid "Attendee Details"
 msgstr "与会者详情"
 
+#: src/components/layouts/AuthLayout/index.tsx:72
+msgid "Attendee Management"
+msgstr ""
+
 #: src/components/layouts/CheckIn/index.tsx:140
 msgid "Attendee not found"
 msgstr "未找到参与者"
@@ -721,6 +725,14 @@ msgstr "具有特定产品的参会者"
 #: src/components/common/WidgetEditor/index.tsx:233
 msgid "Auto Resize"
 msgstr "自动调整大小"
+
+#: src/components/layouts/AuthLayout/index.tsx:87
+msgid "Auto Workflow"
+msgstr "自动化工作流"
+
+#: src/components/layouts/AuthLayout/index.tsx:78
+msgid "Automated entry management with multiple check-in lists and real-time validation"
+msgstr "使用多个签到列表和实时验证的自动化入场管理"
 
 #: src/components/common/WidgetEditor/index.tsx:236
 msgid "Automatically resize the widget height based on the content. When disabled, the widget will fill the height of the container."
@@ -813,6 +825,10 @@ msgstr "账单地址"
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:167
 msgid "Billing Settings"
 msgstr "账单设置"
+
+#: src/components/layouts/AuthLayout/index.tsx:82
+msgid "Brand Control"
+msgstr "品牌控制"
 
 #: src/components/common/LanguageSwitcher/index.tsx:24
 msgid "Brazilian Portuguese"
@@ -1120,6 +1136,10 @@ msgstr "完成付款"
 msgid "Complete Payment"
 msgstr "完成付款"
 
+#: src/components/layouts/AuthLayout/index.tsx:67
+msgid "Complete Store"
+msgstr "完整商店"
+
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:153
 msgid "Complete Stripe Setup"
 msgstr "完成 Stripe 设置"
@@ -1179,6 +1199,10 @@ msgstr "连接文档"
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:52
 #~ msgid "Connect Stripe"
 #~ msgstr "连接条纹"
+
+#: src/components/layouts/AuthLayout/index.tsx:88
+msgid "Connect with CRM and automate tasks using webhooks and integrations"
+msgstr "连接 CRM 并使用 Webhook 和集成自动化任务"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:152
 #: src/components/routes/event/GettingStarted/index.tsx:126
@@ -1304,7 +1328,7 @@ msgstr "创建账户或 <0>{0}</0> 开始使用"
 msgid "create an organizer"
 msgstr "创建一个组织者"
 
-#: src/components/layouts/AuthLayout/index.tsx:56
+#: src/components/layouts/AuthLayout/index.tsx:27
 msgid "Create and customize your event page instantly"
 msgstr "立即创建和自定义您的活动页面"
 
@@ -1437,6 +1461,10 @@ msgstr "自定义此事件的搜索引擎优化设置"
 #: src/components/routes/event/GettingStarted/index.tsx:99
 msgid "Customize your event page"
 msgstr "定制您的活动页面"
+
+#: src/components/layouts/AuthLayout/index.tsx:83
+msgid "Customize your event page and widget design to match your brand perfectly"
+msgstr "自定义您的活动页面和小部件设计，以完美匹配您的品牌"
 
 #: src/components/routes/event/GettingStarted/index.tsx:95
 msgid "Customize your event page to match your brand and style."
@@ -2164,6 +2192,10 @@ msgstr "固定费用："
 msgid "Flash is not available on this device"
 msgstr "该设备不支持闪存"
 
+#: src/components/layouts/AuthLayout/index.tsx:57
+msgid "Flexible Ticketing"
+msgstr "灵活的票务系统"
+
 #: src/components/routes/auth/Login/index.tsx:80
 msgid "Forgot password?"
 msgstr "忘记密码？"
@@ -2206,7 +2238,7 @@ msgstr "常规"
 msgid "German"
 msgstr "德国"
 
-#: src/components/layouts/AuthLayout/index.tsx:64
+#: src/components/layouts/AuthLayout/index.tsx:35
 msgid "Get started for free, no subscription fees"
 msgstr "免费开始，无订阅费用"
 
@@ -2285,7 +2317,7 @@ msgstr "Hi.Events Conference {0}"
 msgid "Hi.Events Conference Center"
 msgstr "Hi.Events 会议中心"
 
-#: src/components/layouts/AuthLayout/index.tsx:21
+#: src/components/layouts/AuthLayout/index.tsx:131
 msgid "hi.events logo"
 msgstr "hi.events 徽标"
 
@@ -2817,6 +2849,10 @@ msgstr "向有特定产品的参会者发送消息"
 #~ msgid "Message attendees with specific tickets"
 #~ msgstr "向与会者发送特定门票的信息"
 
+#: src/components/layouts/AuthLayout/index.tsx:73
+msgid "Message attendees, manage orders, and handle refunds all in one place"
+msgstr "在一个地方向与会者发送消息、管理订单并处理退款"
+
 #: src/components/common/OrdersTable/index.tsx:158
 msgid "Message buyer"
 msgstr "留言买家"
@@ -2853,6 +2889,10 @@ msgstr "其他"
 #: src/components/routes/event/Settings/Sections/MiscSettings/index.tsx:69
 msgid "Miscellaneous Settings"
 msgstr "杂项设置"
+
+#: src/components/layouts/AuthLayout/index.tsx:62
+msgid "Mobile Check-in"
+msgstr "移动签到"
 
 #: src/components/forms/QuestionForm/index.tsx:106
 msgid "Multi line text box"
@@ -2958,7 +2998,7 @@ msgstr "没有容量分配"
 msgid "No Check-In Lists"
 msgstr "没有签到列表"
 
-#: src/components/layouts/AuthLayout/index.tsx:63
+#: src/components/layouts/AuthLayout/index.tsx:34
 msgid "No Credit Card Required"
 msgstr "无需信用卡"
 
@@ -3765,7 +3805,7 @@ msgstr "已售产品"
 msgid "Products sorted successfully"
 msgstr "产品排序成功"
 
-#: src/components/layouts/AuthLayout/index.tsx:72
+#: src/components/layouts/AuthLayout/index.tsx:43
 msgid "Products, merchandise, and flexible pricing options"
 msgstr "产品、商品和灵活的定价选项"
 
@@ -3815,6 +3855,10 @@ msgstr "提供此问题的附加背景或说明。使用此字段添加条款和
 #: src/components/modals/ShareModal/index.tsx:126
 msgid "QR Code"
 msgstr "二维码"
+
+#: src/components/layouts/AuthLayout/index.tsx:63
+msgid "QR code scanning with instant feedback and secure sharing for staff access"
+msgstr "二维码扫描，提供即时反馈和安全共享，供工作人员使用"
 
 #: src/components/forms/ProductForm/index.tsx:85
 #: src/components/forms/ProductForm/index.tsx:302
@@ -4189,7 +4233,11 @@ msgstr "选择哪些事件将触发此 Webhook"
 msgid "Select..."
 msgstr "选择..."
 
-#: src/components/layouts/AuthLayout/index.tsx:71
+#: src/components/layouts/AuthLayout/index.tsx:68
+msgid "Sell merchandise alongside tickets with integrated tax and promo code support"
+msgstr "与门票一起销售商品，支持集成税收和促销代码"
+
+#: src/components/layouts/AuthLayout/index.tsx:42
 msgid "Sell More Than Tickets"
 msgstr "销售不仅仅是门票"
 
@@ -4270,7 +4318,7 @@ msgstr "实时设置您的活动"
 msgid "Settings"
 msgstr "设置"
 
-#: src/components/layouts/AuthLayout/index.tsx:55
+#: src/components/layouts/AuthLayout/index.tsx:26
 msgid "Setup in Minutes"
 msgstr "几分钟内完成设置"
 
@@ -4373,6 +4421,14 @@ msgstr "单行文本框"
 #: src/components/routes/welcome/index.tsx:137
 msgid "Skip this step"
 msgstr "跳过此步骤"
+
+#: src/components/layouts/AuthLayout/index.tsx:77
+msgid "Smart Check-in"
+msgstr "智能签到"
+
+#: src/components/layouts/AuthLayout/index.tsx:52
+msgid "Smart Dashboard"
+msgstr "智能仪表板"
 
 #: src/components/routes/auth/Register/index.tsx:90
 msgid "Smith"
@@ -4616,6 +4672,10 @@ msgstr "100 号套房"
 #: src/components/routes/event/Settings/Sections/EmailSettings/index.tsx:62
 msgid "Support Email"
 msgstr "支持电子邮件"
+
+#: src/components/layouts/AuthLayout/index.tsx:58
+msgid "Support for tiered, donation-based, and product sales with customizable pricing and capacity"
+msgstr "支持分级、捐赠和产品销售，价格和容量可定制"
 
 #: src/components/forms/ProductForm/index.tsx:254
 msgid "T-shirt"
@@ -5099,6 +5159,10 @@ msgstr "剩余总数"
 #: src/components/routes/event/EventDashboard/index.tsx:143
 msgid "Total Tax"
 msgstr "总税额"
+
+#: src/components/layouts/AuthLayout/index.tsx:53
+msgid "Track revenue, page views, and sales with detailed analytics and exportable reports"
+msgstr "使用详细分析和可导出的报告跟踪收入、页面浏览量和销售情况"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:51
 msgid "Transaction Fee:"
