Update Vietnamese translation

--- a/frontend/src/locales/vi.po
+++ b/frontend/src/locales/vi.po
@@ -62,7 +62,7 @@ msgstr "{phút} phút và {giây} giây"
 
 #: src/components/routes/welcome/index.tsx:59
 msgid "{organizerName}'s first event"
-msgstr "{tổ chức} sự kiện đầu tiên của"
+msgstr "Sự kiện đầu tiên của {organizerName}"
 
 #: src/components/common/CapacityAssignmentList/index.tsx:47
 msgid "<0>Capacity assignments let you manage capacity across tickets or an entire event. Ideal for multi-day events, workshops, and more, where controlling attendance is crucial.</0><1>For instance, you can associate a capacity assignment with <2>Day One</2> and <3>All Days</3> ticket. Once the capacity is reached, both tickets will automatically stop being available for sale.</1>"
